...
    android:padding="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <com.gauravk.bubblenavigation.BubbleToggleView
        android:id="@+id/nav_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:bt_title="Movie"
        app:bt_colorActive="@color/colorPrimaryDark"
        app:bt_colorInactive="@color/inactive"
        app:bt_icon="@drawable/ic_movie"
        app:bt_shape="@drawable/bottom_nav_stroke" />

    <com.gauravk.bubblenavigation.BubbleToggleView
        android:id="@+id/nav_tvshow"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        app:bt_title="TV Show"
        app:bt_colorActive="@color/colorPrimaryDark"
        app:bt_colorInactive="@color/inactive"
...
